--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -36,9 +36,9 @@
     
     <properties>
 
-        <osgi-mock.version>3.0.1-SNAPSHOT</osgi-mock.version>
-        <jcr-mock.version>1.5.1-SNAPSHOT</jcr-mock.version>
-        <resourceresolver-mock.version>1.2.1-SNAPSHOT</resourceresolver-mock.version>
+        <osgi-mock.version>3.0.0</osgi-mock.version>
+        <jcr-mock.version>1.5.0</jcr-mock.version>
+        <resourceresolver-mock.version>1.2.0</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
         <servlet-helpers.version>1.4.2</servlet-helpers.version>
         <resourcebuilder.version>1.0.4</resourcebuilder.version>
