--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -36,7 +36,7 @@
 
     <properties>
 
-        <osgi-mock.version>3.1.0</osgi-mock.version>
+        <osgi-mock.version>3.1.1-SNAPSHOT</osgi-mock.version>
         <jcr-mock.version>1.5.2</jcr-mock.version>
         <resourceresolver-mock.version>1.2.0</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
