--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>sling-bundle-parent</artifactId>
-        <version>41</version>
+        <version>44</version>
         <relativePath />
     </parent>
 
@@ -35,7 +35,6 @@
     <description>Mock implementation of selected Sling APIs.</description>
 
     <properties>
-
         <osgi-mock.version>3.1.2</osgi-mock.version>
         <jcr-mock.version>1.5.3-SNAPSHOT</jcr-mock.version>
         <resourceresolver-mock.version>1.2.2</resourceresolver-mock.version>
@@ -43,6 +42,7 @@
         <servlet-helpers.version>1.4.2</servlet-helpers.version>
         <resourcebuilder.version>1.0.4</resourcebuilder.version>
 
+        <project.build.outputTimestamp>2021-08-24T00:00:00Z</project.build.outputTimestamp>
     </properties>
 
     <dependencies>
