--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -35,7 +35,7 @@
     <description>Mock implementation of selected Sling APIs.</description>
 
     <properties>
-        <osgi-mock.version>3.1.2</osgi-mock.version>
+        <osgi-mock.version>3.1.3-SNAPSHOT</osgi-mock.version>
         <jcr-mock.version>1.5.3-SNAPSHOT</jcr-mock.version>
         <resourceresolver-mock.version>1.2.2</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
