--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -35,8 +35,8 @@
     <description>Mock implementation of selected Sling APIs.</description>
 
     <properties>
-        <osgi-mock.version>3.1.4</osgi-mock.version>
-        <jcr-mock.version>1.5.4</jcr-mock.version>
+        <osgi-mock.version>3.1.5-SNAPSHOT</osgi-mock.version>
+        <jcr-mock.version>1.5.5-SNAPSHOT</jcr-mock.version>
         <resourceresolver-mock.version>1.2.2</resourceresolver-mock.version>
         <logging-mock.version>2.0.0</logging-mock.version>
         <servlet-helpers.version>1.4.2</servlet-helpers.version>
@@ -237,7 +237,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.fsresource</artifactId>
-            <version>2.2.0</version>
+            <version>2.2.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
